WIP: Add JWT auth token
