# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,0 +1,10 @@
+import { AuthenticateUserController } from '@modules/accounts/useCases/authenticateUser/AuthenticateUserController';
+import { Router } from 'express';
+
+const authenticateRoutes = Router();
+
+const authenticateUserController = new AuthenticateUserController();
+
+authenticateRoutes.post('/sessions', authenticateUserController.handle);
+
+export { authenticateRoutes };
